Adding swagger Entry for insertTimeseries, correcting deleteTimeseries_legacy entry.
